--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: zaproxy/action-full-scan@v0.9.0
         with:
           # token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          # docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://127.0.0.1:5000/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
