--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -16,10 +16,10 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.9.0
         with:
-          # token: ${{ secrets.GITHUB_TOKEN }}
-          # docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://127.0.0.1:5000/'
-          # rules_file_name: '.zap/rules.tsv'
-          # cmd_options: '-a'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
       # Your existing steps...
 
