--- a/.github/workflows/zap_baseline.yaml
+++ b/.github/workflows/zap_baseline.yaml
@@ -8,4 +8,4 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.11.0
         with:
-          target: 'http://172.16.10.138:5000/'
+          target: 'https://google-gruyere.appspot.com/561107255923692790570133811838178574783/'
