--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://172.16.10.138:5000/'
+          target: 'https://google-gruyere.appspot.com/561107255923692790570133811838178574783/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
       # Your existing steps...
