--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 'Dependency Review'
+      if: ${{ github.event_name == 'pull_request' }}
       uses: actions/dependency-review-action@v4
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
