--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -43,6 +43,7 @@ jobs:
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results-fs.sarif'
+          severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
           skip-dirs: "ignored-dir"
 
       - name: Upload Trivy scan results to GitHub Security tab
