--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -19,7 +19,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
-          rules_file_name: '.zap/rules.tsv'
+          # rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
       # Your existing steps...
 
