--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -20,7 +20,10 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
           # rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a -j'
+          cmd_options: '-a'
+
+          # cmd_options: '-a -j' --> '-j' is to add ajax spider (good for modern webapps, 
+          # but this resulted in https://www.google.com to be attacked by ZAP = gg!!!
       # Your existing steps...
 # TEST
 
