--- a/.github/workflows/hawkscan.yml
+++ b/.github/workflows/hawkscan.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Run Nginx
-        run: docker run --rm --detach --publish 8080:80 --name nginx_test nginx
+      # - name: Run Nginx
+      # run: docker run --rm --detach --publish 8080:80 --name nginx_test nginx
 
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
