--- a/.github/workflows/zap_baseline.yaml
+++ b/.github/workflows/zap_baseline.yaml
@@ -1,11 +1,22 @@
-on: [push]
+on:
+  push:
+  pull_request:
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
     name: Scan Website
+
     steps:
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.11.0
-        with:
-          target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
+    - name: ZAP Scan
+      uses: zaproxy/action-baseline@v0.11.0
+      with:
+        target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
+        # docker_name: 'ghcr.io/zaproxy/zaproxy:weekly'  # Use the weekly ZAP Docker image
+        # rules_file_name: '.zap/rules.tsv'  # Path to the ZAP rules file
+        # cmd_options: '-a'  # Additional command line options for the baseline script
+        # allow_issue_writing: false  # Set to false to prevent creating/updating the GitHub issue
+        # issue_title: 'ZAP Scan Report'  # Title for the GitHub issue
+        # token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token (not needed if using default actions token)
+        # fail_action: true  # Fail the GitHub Action if ZAP identifies any alerts
+        # artifact_name: 'zap_scan_report'  # Name for the artifact containing the ZAP report
