--- a/.github/workflows/zap_baseline.yaml
+++ b/.github/workflows/zap_baseline.yaml
@@ -13,7 +13,7 @@ jobs:
       with:
         target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
         # docker_name: 'ghcr.io/zaproxy/zaproxy:weekly'  # Use the weekly ZAP Docker image
-        # rules_file_name: '.zap/rules.tsv'  # Path to the ZAP rules file
+        rules_file_name: '.zap/rules.tsv'  # Path to the ZAP rules file
         # cmd_options: '-a'  # Additional command line options for the baseline script
         # allow_issue_writing: false  # Set to false to prevent creating/updating the GitHub issue
         # issue_title: 'ZAP Scan Report'  # Title for the GitHub issue
