--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -9,7 +9,7 @@ jobs:
     name: Scan the webapplication
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           ref: main
       - name: Check Docker daemon status
@@ -17,18 +17,18 @@ jobs:
           sudo systemctl status docker || true
           docker info || true
       - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.9.0
+        uses: zaproxy/action-full-scan@v0.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
-          # rules_file_name: '.zap/rules.tsv'
+          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
 
-          # cmd_options: '-a -j' --> '-j' is to add ajax spider (good for modern webapps, 
-          # but this resulted in https://www.google.com to be attacked by ZAP = gg!!!
+          # cmd_options: '-a -j' --> '-j' is to add ajax spider (good for modern webapps = uses JS, 
+          #as ajax spider good for JS (JavaScript)
+          # but this resulted in https://www.google.com to be attacked by ZAP = kena sued!!!
       # You can configure to blacklist some websites from being attacked
   # Or ignore certain findings that are insignificant by configuring
-# a .tsv file (.zap/rules.tsv) WIP WIP WIP WIP
-# TEST
+# a .tsv file (.zap/rules.tsv)
 
