--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -23,7 +23,11 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
           rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+          # cmd_options: '-a'
+          # Additional command line options
+          # -j   runs the AJAX spider
+          # -U   specifies which user to select from the context file
+          cmd_options: '-a -j -U "test123" -n /zap/wrk/ctx_file.context'
 
           # cmd_options: '-a -j' --> '-j' is to add ajax spider (good for modern webapps = uses JS, 
           #as ajax spider good for JS (JavaScript)
