--- a/.github/workflows/zap_baseline.yaml
+++ b/.github/workflows/zap_baseline.yaml
@@ -16,7 +16,7 @@ jobs:
         ZAP_PASSWORD: ${{secrets.ZAP_PASSWORD}}
         # Replace the "PLACEHOLDER" string in the context file with the password
       run: |
-        sed -ie "s/dGVzdDEyMw==~PASSWORD~/dGVzdDEyMw==~${ZAP_USER_PASSWORD}~/" $GITHUB_WORKSPACE/Authentication.context
+        sed -ie "s/dGVzdDEyMw==~PASSWORD~/dGVzdDEyMw==~${ZAP_PASSWORD}~/" $GITHUB_WORKSPACE/Authentication.context
 
     - name: ZAP Scan
       uses: zaproxy/action-baseline@v0.11.0
