--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -16,6 +16,11 @@ jobs:
         run: |
           sudo systemctl status docker || true
           docker info || true
+      - name: Replacing Password
+        env:
+          ZAP_PASSWORD: ${{secrets.ZAP_PASSWORD}}
+        run: |
+          sed -ie "s/dGVzdDEyMw==~PASSWORD~/dGVzdDEyMw==~${ZAP_PASSWORD}~/" $GITHUB_WORKSPACE/Authentication.context
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.10.0
         with:
