--- a/.github/workflows/zap_baseline.yaml
+++ b/.github/workflows/zap_baseline.yaml
@@ -5,6 +5,12 @@ on:
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
+
+    permissions:
+      actions: read
+      contents: read
+      issues: write
+
     name: Scan Website
 
     steps:
