--- a/.github/workflows/zap_scan.yaml
+++ b/.github/workflows/zap_scan.yaml
@@ -6,6 +6,12 @@ on:
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
+
+    permissions:
+      actions: read
+      contents: read
+      issues: write
+
     name: Scan the webapplication
     
     steps:
