--- a/.github/workflows/zap_baseline.yaml
+++ b/.github/workflows/zap_baseline.yaml
@@ -29,7 +29,7 @@ jobs:
         target: 'https://google-gruyere.appspot.com/359590344817771210252875530455144199549/'
         # docker_name: 'ghcr.io/zaproxy/zaproxy:weekly'  # Use the weekly ZAP Docker image
         rules_file_name: '.zap/rules.tsv'  # Path to the ZAP rules file
-        cmd_options: '-a -j -d -m "1" -U "test123" -n /zap/wrk/Authentication.context' # Additional command line options for the baseline script
+        cmd_options: '-a -d -m "1" -n /zap/wrk/Authentication.context' # Additional command line options for the baseline script
         # allow_issue_writing: false  # Set to false to prevent creating/updating the GitHub issue
         # issue_title: 'Test123'  # Title for the GitHub issue
         # token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token (not needed if using default actions token)
