--- a/.github/workflows/AFrun.yml
+++ b/.github/workflows/AFrun.yml
@@ -5,11 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Scan the webapplication
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: master
       - name: ZAP Scan
         uses: zaproxy/action-af@v0.1.0
         with:
           plan: '.github/workflows/AFzap.yml'
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'http://localhost/DVWA/'
+          # cmd_options: '-a'
