--- a/.github/workflows/AFrun.yml
+++ b/.github/workflows/AFrun.yml
@@ -10,5 +10,5 @@ jobs:
         with:
           plan: '.github/workflows/AFzap.yml'
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://localhost/DVWA/'
+          # target: 'http://localhost/DVWA/'
           # cmd_options: '-a'
