--- a/.github/workflows/AFrun.yml
+++ b/.github/workflows/AFrun.yml
@@ -1,14 +1,24 @@
-on: [push]
+name: Check run
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
 
 jobs:
-  zap_scan:
+  check-run:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
+
     steps:
-      - name: ZAP Scan
-        uses: zaproxy/action-af@v0.1.0
-        with:
-          plan: '.github/workflows/AFzap.yml'
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          # target: 'http://localhost/DVWA/'
-          # cmd_options: '-a'
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - run: sudo systemctl start nginx
+
+    - name: ZAP Plan
+      uses: ./
+      id: af-plan
+      with:
+        plan: '.zap/AFplan.yml'
