--- a/.github/workflows/AFrun.yml
+++ b/.github/workflows/AFrun.yml
@@ -1,11 +1,4 @@
-name: Check run
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-  workflow_dispatch:
+on: [push]
 
 jobs:
   check-run:
